--- a/index.html
+++ b/index.html
@@ -123,6 +123,6 @@
         <p>&copy;Seven Day Peaceful Personal Care Services LLC 2023</p>
         <p>Web design by <a href="https://jacksondlee.com">Jackson Lee</a></p>
     </div> -->
-    <script src="../scripts/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
