--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div id="nav">
         <div class="nav-logo">
             <div class="logo">
-                <img src="./static/logo.jpg" alt="">
+                <img src="/assets/logo.jpg" alt="">
             </div>
         </div>
         
-            <div class="nav-dropdown"  onclick="dropdown()"><img height="50px" width="50px" src="../static/Icons/menu.png" alt="" srcset=""></div>
+            <div class="nav-dropdown"  onclick="dropdown()"><img height="50px" width="50px" src="../assets/Icons/menu.png" alt="" srcset=""></div>
             <ul class="nav-items">
                 <li><a href="/about">About</a></li>
                 <li><a href="/services">Services</a></li>
@@ -34,7 +34,7 @@
             </div>
             <!-- Our goal is to ensure you can stay independant in your home as long as possible. Our staff prides ourselves on providing our clientele with exceptional quality care. You can even have a family member care for you! -->
             <div class="hero-img">
-                <img src="./static/hero1.jpg" alt="">
+                <img src="/assets/hero1.jpg" alt="">
             </div>
 
         </div>
@@ -42,14 +42,14 @@
         <div class="cards">
             
             <div class="card" data-animation="slideInUp" data-animation-delay="300ms" data-animation="slideInUp" data-animation-delay="300ms">
-                <div class="card-body"><img src="./static/icons/car.png" alt=""></div>
+                <div class="card-body"><img src="/assets/icons/car.png" alt=""></div>
                 <div class="card-title">
                     <h4>Mobility & Transportation</h4>
                 </div>
                 <div class="card-footer"><a class="btn btn-primary" href="/about#mobility">Learn More</a></div>
             </div>
             <div class="card" data-animation="slideInUp" data-animation-delay="300ms">
-                <div class="card-body"><img src="./static/icons/food.png" alt=""></div>
+                <div class="card-body"><img src="/assets/icons/foodpng" alt=""></div>
                 <div class="card-title">
                     <h4>Meal Preparation</h4>
                 </div>
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="card " data-animation="slideInUp" data-animation-delay="300ms">
-                <div class="card-body"><img src="./static/icons/pharmacy.png" alt=""></div>
+                <div class="card-body"><img src="/assets/icons/pharmacy.png" alt=""></div>
                 <div class="card-title">
                     <h4>Medication Reminders</h4>
                 </div>
@@ -68,7 +68,7 @@
                 </div>
             </div>
             <div class="card " data-animation="slideInUp" data-animation-delay="300ms">
-                <div class="card-body"><img src="./static/icons/wash.png" alt="">
+                <div class="card-body"><img src="/assets/icons/wash.png" alt="">
 
                 </div>
                 <div class="card-title" >
@@ -79,7 +79,7 @@
                 </div>
             </div>
             <div class="card" data-animation="slideInUp" data-animation-delay="300ms">
-                <div class="card-body"><img src="./static/icons/broom.png" alt=""></div>
+                <div class="card-body"><img src="/assets/icons/broom.png" alt=""></div>
                 <div class="card-title">
                     <h4>Housekeeping</h4>
                 </div>
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="card" data-animation="slideInUp" data-animation-delay="300ms">
-                <div class="card-body"><img src="./static/icons/meeting.png" alt=""></div>
+                <div class="card-body"><img src="/assets/icons/meeting.png" alt=""></div>
                 <div class="card-title">
                     <h4>Companionship</h4>
                 </div>
@@ -111,7 +111,7 @@
     </div>
     <!-- <div class="footer">
         <div class="footer-logo">
-            <img src="../static/logo.jpg" alt="">
+            <img src="../assets/logo.jpg" alt="">
         </div>
 
         <ul class="footer-items">
